(package.json) Add `build-watch` command to only build when index.js is updated

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {},
   "scripts": {
     "build": "esbuild --bundle index.js --outdir=dist --minify --sourcemap",
+    "build-watch": "nodemon --exec yarn build -w index.js",
     "serve": "nodemon --exec serve"
   }
 }
