(index.js; package.json) Adding Vercel Analytics

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "devDependencies": {
     "mithril": "^2.2.2",
     "esbuild": "^0.17.5",
-    "serve": "^14.2.0"
+    "serve": "^14.2.0",
+    "@vercel/analytics": "^0.1.8"
   },
   "name": "tick!",
   "version": "1.0.0",
